--- a/Prometheus/jvm_micrometer.dash.yaml
+++ b/Prometheus/jvm_micrometer.dash.yaml
@@ -49,15 +49,23 @@ datasets:
     ## cards Datasets
     - uuid: uptime
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}process_uptime_seconds{${global_filter}}
     - uuid: start_time
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}process_start_time_seconds{${global_filter}}
     - uuid: heap_used
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}sum(jvm_memory_used_bytes{${global_filter},area="heap"})*100/sum(jvm_memory_max_bytes{${global_filter},area="heap"})
     - uuid: system_cpu_usage
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}system_cpu_usage{${global_filter}}
 
     ## Timeseries datasets
@@ -66,23 +74,61 @@ datasets:
     - uuid: heap_used_bytes
       type: prometheus
       url: ${query_url}jvm_memory_used_bytes{${global_filter}, area="heap"}${time_window}
+      cacheEnabled: true
+      refreshTime: "1second"
     - uuid: nonheap_used_bytes
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}jvm_memory_used_bytes{${global_filter}, area="nonheap"}${time_window}
     - uuid: used_bytes_total
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}sum by (instance) (jvm_memory_used_bytes{${global_filter}})${time_window}
 
     # Threads
     - uuid: threads_states
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}jvm_threads_states_threads{${global_filter}}${time_window}
     - uuid: live_threads
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}jvm_threads_live_threads{${global_filter}}${time_window}
     - uuid: daemon_threads
       type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
       url: ${query_url}jvm_threads_daemon_threads{${global_filter}}${time_window}
+    - uuid: live_threads
+      type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
+      url: ${query_url}jvm_threads_live_threads{${global_filter}}${time_window}
+      
+
+      # GC
+    - uuid: gc_pause_sum
+      type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
+      url: ${query_url}jvm_gc_pause_seconds_sum{${global_filter}}${time_window}
+
+    # System
+    - uuid: open_files
+      type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
+      url: ${query_url}process_files_open_files{${global_filter}}${time_window}
+    - uuid: system_cpu
+      type: prometheus
+      cacheEnabled: true
+      refreshTime: "1second"
+      url: ${query_url}system_cpu_usage{${global_filter}}${time_window}
+
 pages:
     - rows:
           - _columns:
@@ -121,7 +167,7 @@ pages:
                                               minutes = round(minutes % 60);
                                               if (hours >= 24) {
                                                   days = round(hours / 24);
-                                                  hours = round(hours % 60);
+                                                  hours = round(hours % 24);
                                               }
                                           }
                                       }
@@ -190,13 +236,13 @@ pages:
                 - components:
                       - html: >-
                             <p style="${subTitleStyle}">
-                                Memory
+                                JVM
                             </p> 
                             <hr style="margin: 10px; opacity: 0.2"/>
           - properties:
                 margin-top: 30px
             columns:
-                - span: 4
+                - span: 3
                   components:
                       - settings:
                             type: timeseries
@@ -205,9 +251,6 @@ pages:
                             chart:
                                 margin:
                                     left: 80
-                            columns:
-                                - id: value
-                                  expression: "#"
                             lookup:
                                 uuid: heap_used_bytes
                                 group:
@@ -215,7 +258,7 @@ pages:
                                           - source: id
                                           - source: timestamp
                                           - source: value
-                - span: 4
+                - span: 3
                   components:
                       - settings:
                             type: timeseries
@@ -234,23 +277,36 @@ pages:
                                           - source: id
                                           - source: timestamp
                                           - source: value
-                - span: 4
+                - span: 3
                   components:
                       - settings:
                             type: timeseries
                             general:
-                                title: Memory Used Bytes Total
+                                title: GC Pause
                             chart:
                                 margin:
-                                    left: 80
-                            columns:
-                                - id: dummy
-                                  expression: "_"
+                                    left: 35
                             lookup:
-                                uuid: used_bytes_total
+                                uuid: gc_pause_sum
                                 group:
                                     - functions:
-                                          - source: instance
+                                          - source: cause
+                                          - source: timestamp
+                                          - source: value
+                - span: 3
+                  components:
+                      - settings:
+                            type: timeseries
+                            general:
+                                title: Threads States
+                            chart:
+                                margin:
+                                    left: 35
+                            lookup:
+                                uuid: threads_states
+                                group:
+                                    - functions:
+                                          - source: state
                                           - source: timestamp
                                           - source: value
           - properties:
@@ -259,29 +315,62 @@ pages:
                 - components:
                       - html: >-
                             <p style="${subTitleStyle}">
-                                Threads
+                                System
                             </p> 
                             <hr style="margin: 10px; opacity: 0.2"/>
           - properties:
                 margin-top: 30px
             columns:
-                - span: 4
+                - span: 3
                   components:
                       - settings:
                             type: timeseries
                             general:
-                                title: Threads States
-                            columns:
-                                - id: value
-                                  expression: "#"
+                                title: Heap Total Used Bytes
+                            chart:
+                                margin:
+                                    left: 85
+
                             lookup:
-                                uuid: threads_states
+                                uuid: used_bytes_total
                                 group:
                                     - functions:
-                                          - source: state
+                                          - source: instance
                                           - source: timestamp
                                           - source: value
-                - span: 4
+                - span: 3
+                  components:
+                      - settings:
+                            type: timeseries
+                            general:
+                                title: System CPU
+                            extraConfiguration: >-
+                                {
+                                    
+                                    "yAxis": {
+                                        "max": 1
+                                    },
+                                    "xAxis": {
+                                        "splitNumber": 5
+                                    },
+                                    "title": {
+                                        "textStyle" : { 
+                                            "fontSize" : 15
+                                        }
+                                    }
+                                    
+                                }
+                            columns:
+                                - id: value
+                                  expression: "value * 100"
+                            lookup:
+                                uuid: system_cpu
+                                group:
+                                    - functions:
+                                          - source: instance
+                                          - source: timestamp
+                                          - source: value
+                - span: 3
                   components:
                       - settings:
                             type: timeseries
@@ -297,17 +386,17 @@ pages:
                                           - source: instance
                                           - source: timestamp
                                           - source: value
-                - span: 4
+                - span: 3
                   components:
                       - settings:
                             type: timeseries
                             general:
-                                title: Daemon Threads
+                                title: Open Files
                             columns:
                                 - id: value
                                   expression: "#"
                             lookup:
-                                uuid: daemon_threads
+                                uuid: open_files
                                 group:
                                     - functions:
                                           - source: instance
